Adding in the demo server used for testing the Android and Web Server Application

--- a/Node/package.json
+++ b/Node/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "dependencies": {
     "express": "^4.14.0",
-    "johnny-five": "^0.10.1"
+    "johnny-five": "^0.10.1",
+    "ws": "^1.1.1"
   },
   "devDependencies": {},
   "scripts": {
